--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 rvm:
   - 1.8.7
+  - 1.9.2
+  - 1.9.3
 gemfile:
   - gemfiles/Gemfile.puppet-2.6
   - gemfiles/Gemfile.puppet-2.7
@@ -9,3 +11,9 @@ branches:
 notifications:
   email:
     - tim@github.com
+matrix:
+  exclude:
+    - rvm: 1.9.2
+      gemfile: gemfiles/Gemfile.puppet-2.6
+    - rvm: 1.9.3
+      gemfile: gemfiles/Gemfile.puppet-2.6
