--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,18 @@ rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
-gemfile:
-  - gemfiles/Gemfile.puppet-2.6
-  - gemfiles/Gemfile.puppet-2.7
 branches:
   only:
     - master
 notifications:
   email:
     - tim@github.com
+env:
+  - PUPPET_VERSION=2.6.13
+  - PUPPET_VERSION=2.7.9
 matrix:
   exclude:
     - rvm: 1.9.2
-      gemfile: gemfiles/Gemfile.puppet-2.6
+      env: PUPPET_VERSION=2.6.13
     - rvm: 1.9.3
-      gemfile: gemfiles/Gemfile.puppet-2.6
+      env: PUPPET_VERSION=2.6.13
