--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ notifications:
 env:
   - PUPPET_VERSION=2.6.13
   - PUPPET_VERSION=2.7.9
+  - PUPPET_VERSION=0.25.4
 matrix:
   exclude:
     - rvm: 1.9.2
