Don't test 0.25.4 against ruby 1.9.x

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,7 @@ matrix:
       env: PUPPET_VERSION=2.6.13
     - rvm: 1.9.3
       env: PUPPET_VERSION=2.6.13
+    - rvm: 1.9.2
+      env: PUPPET_VERSION=0.25.4
+    - rvm: 1.9.3
+      env: PUPPET_VERSION=0.25.4
