--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install: gem update --system 2.1.11
 branches:
   only:
     - master
+bundler_args: --without development system_tests
 rvm:
   - 1.8.7
   - 1.9.3
