--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: ruby
 sudo: false
 cache: bundler
-before_install: gem update --system 2.1.11
+before_install: gem update --system
 branches:
   only:
     - master
