--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 language: ruby
 sudo: false
-before_install: gem update --system
+before_install: gem update --system && gem install bundler
 branches:
   only:
     - master
