--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ rvm:
   - 2.1.9
   - 2.3.1
   - 2.4.0
+matrix:
+  allow_failures:
+  - rvm: 1.8.7
 notifications:
   email:
     - tim@bombasticmonkey.com
