Add rubocop task to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ branches:
   only:
     - master
 bundler_args: --without development system_tests
+script:
+    - bundle exec rake $CHECK
+env:
+    - CHECK=test
 rvm:
   - 1.9.3
   - 2.0.0
@@ -13,3 +17,7 @@ rvm:
   - 2.2.7
   - 2.3.4
   - 2.4.1
+matrix:
+    include:
+        - rvm: 2.4.1
+          env: CHECK=rubocop
