Restore Ruby 1.8.7 support

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -62,7 +62,7 @@ Style/MethodCalledOnDoEndBlock:
 Style/RegexpLiteral:
     EnforcedStyle: percent_r
 Style/TrailingCommaInArguments:
-    EnforcedStyleForMultiline: comma
+    EnforcedStyleForMultiline: no_comma
 Style/TrailingCommaInLiteral:
     EnforcedStyleForMultiline: comma
 Style/FormatStringToken:
