--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,8 @@ environment:
     - RUBY_VERSION: 22
     - RUBY_VERSION: 23-x64
     - RUBY_VERSION: 24-x64
+    - RUBY_VERSION: 25-x64
+    - RUBY_VERSION: 26-x64
 
 matrix:
   allow_failures:
