--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,9 @@ rvm:
   - 2.3.8
   - 2.4.7
   - 2.5.6
-  - 2.6.4
 matrix:
     include:
         - rvm: 2.6.4
           env: CHECK=rubocop
+        - rvm: 2.6.4
+          env: CHECK=ci COVERAGE=yes
