--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,10 @@ name: "ci"
 on:
   push:
     branches:
-      - master
+      - "main"
   pull_request:
     branches:
-      - master
+      - "main"
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
