(MAINT) Add acceptance task to Rakefile
This commit adds a new acceptance task to the Rakefile so that it can be
used with the generic gem ci workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  ci:
+
+  spec:
     uses: "puppetlabs/cat-github-actions/.github/workflows/gem_ci.yml@main"
     secrets: "inherit"
 
+  acceptance:
+    needs: "spec"
+    uses: "puppetlabs/cat-github-actions/.github/workflows/gem_acceptance.yml@main"
+    secrets: "inherit"
